--- a/config/storage.yml
+++ b/config/storage.yml
@@ -9,6 +9,10 @@ local:
 
 cloudinary:
   service: Cloudinary
+  cloud_name: djjnnsqxp
+  api_key: '822857949453519'
+  api_secret: aroZXEO5kUdGeTg18v72cCwzKFE
+
 # Use rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
 # amazon:
 #   service: S3
