--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "popper.js": "^1.16.1",
     "slick-carousel": "^1.8.1"
   },
+  "scripts": {
+    "start": "node index.js"
+  },
   "devDependencies": {
     "webpack-dev-server": "^3.10.1"
   }
