--- a/config/storage.yml
+++ b/config/storage.yml
@@ -6,12 +6,18 @@ local:
   service: Disk
   root: <%= Rails.root.join("storage") %>
 
-
-cloudinary:
-  service: Cloudinary
+development:
   cloud_name: djjnnsqxp
   api_key: '822857949453519'
   api_secret: aroZXEO5kUdGeTg18v72cCwzKFE
+  enhance_image_tag: true
+  static_file_support: false
+production:
+  cloud_name: djjnnsqxp
+  api_key: '822857949453519'
+  api_secret: aroZXEO5kUdGeTg18v72cCwzKFE
+  enhance_image_tag: true
+  static_file_support: true
 
 # Use rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
 # amazon:
